--- a/Final_Updated_Hypothese_3.ipynb
+++ b/Final_Updated_Hypothese_3.ipynb
@@ -18,15 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "ebba4d70",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "c4ea055f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "fd7e51d6",
    "metadata": {},
    "outputs": [
@@ -303,7 +301,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "689352e0",
    "metadata": {},
    "outputs": [
@@ -391,7 +389,7 @@
        "4                en   76578911.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "a09a1e9f",
    "metadata": {},
    "outputs": [
@@ -476,7 +474,7 @@
        "45465                en      0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "4f82cf5f",
    "metadata": {},
    "outputs": [
@@ -594,7 +592,7 @@
        "[7408 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "0bd08ff8",
    "metadata": {},
    "outputs": [],
@@ -618,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "b6d6e400",
    "metadata": {},
    "outputs": [
@@ -725,7 +723,7 @@
        "[1052 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "1d4587f1",
    "metadata": {},
    "outputs": [
@@ -759,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "56ff0ec3",
    "metadata": {},
    "outputs": [
